--- a/administrativo/templates/report.html
+++ b/administrativo/templates/report.html
@@ -1,6 +1,5 @@
 {% extends 'template-administrativo.html' %}
 {% load static %}
-{% load bootstrap4 %}
 
 {% comment %} BLOCO DE TITULO DO SITE {% endcomment %}
 {% block title %}Dashboards - Relatório{% endblock %}
@@ -133,7 +132,7 @@
                     "zeroRecords":    "Nenhum registro encontrado",
                     "paginate": {
                         "next":       "Próximo",
-                        "previous":   "Anterior"
+                        "previous":   "Anterior",
                         "first":      "Primeiro",
                         "last":       "Último",
                     },
