--- a/usuario/templates/notificacoes.html
+++ b/usuario/templates/notificacoes.html
@@ -77,7 +77,7 @@
                     "zeroRecords":    "Nenhum registro encontrado",
                     "paginate": {
                         "next":       "Próximo",
-                        "previous":   "Anterior"
+                        "previous":   "Anterior",
                         "first":      "Primeiro",
                         "last":       "Último",
                     },
