Total e taxa de notificacoes lidas

--- a/administrativo/templates/dashboard-summary.html
+++ b/administrativo/templates/dashboard-summary.html
@@ -22,42 +22,42 @@
 
     <!-- FILTROS -->
     <div class="row">
-        <h5 class="font-weight-bold">Filtros</h5>
-    </div>
-    <form action="." method="get">
-        <div class="row">
-            <div class="col-12 col-sm-12 col-md-4">
-                <select class="browser-default custom-select" id="ano" name="ano">
-                    <option selected value="">Ano</option>
-                    <option value="2020">2020</option>
-                    <option value="2019">2019</option>
-                </select>
+        <h5 class="font-weight-bold col-12 col-sm-12 col-md-12">Filtros</h5>
+        <form action="." method="get" class="col-12 col-sm-12 col-md-12">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-4">
+                    <select class="browser-default custom-select" id="ano" name="ano">
+                        <option selected value="">Ano</option>
+                        <option value="2020">2020</option>
+                        <option value="2019">2019</option>
+                    </select>
+                </div>
+                <div class="col-12 col-sm-12 col-md-4">
+                    <select class="browser-default custom-select" id="mes" name="mes">
+                        <option selected value="">Mês</option>
+                        <option value="1">01</option>
+                        <option value="2">02</option>
+                        <option value="3">03</option>
+                        <option value="4">04</option>
+                        <option value="5">05</option>
+                        <option value="6">06</option>
+                        <option value="7">07</option>
+                        <option value="8">08</option>
+                        <option value="9">09</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                    </select>
+                </div>
+                <div class="col-12 col-sm-12 col-md-2">
+                    <button type="submit" class="btn btn-info btn-block" name="filtrar" title="Filtrar" value="Filtrar">Filtrar</button>
+                </div>
+                <div class="col-12 col-sm-12 col-md-2">
+                    <button type="submit" class="btn btn-warning btn-block" name="limpar" title="Limpar filtros" value="Limpar">Limpar</button>
+                </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-4">
-                <select class="browser-default custom-select" id="mes" name="mes">
-                    <option selected value="">Mês</option>
-                    <option value="1">01</option>
-                    <option value="2">02</option>
-                    <option value="3">03</option>
-                    <option value="4">04</option>
-                    <option value="5">05</option>
-                    <option value="6">06</option>
-                    <option value="7">07</option>
-                    <option value="8">08</option>
-                    <option value="9">09</option>
-                    <option value="10">10</option>
-                    <option value="11">11</option>
-                    <option value="12">12</option>
-                </select>
-            </div>
-            <div class="col-12 col-sm-12 col-md-2">
-                <button type="submit" class="btn btn-info btn-block" name="filtrar" title="Filtrar" value="Filtrar">Filtrar</button>
-            </div>
-            <div class="col-12 col-sm-12 col-md-2">
-                <button type="submit" class="btn btn-warning btn-block" name="limpar" title="Limpar filtros" value="Limpar">Limpar</button>
-            </div>
-        </div>
-    </form><br>
+        </form>
+    </div><br>
 
     <!-- MÉTRICAS -->
     <div class="row">
@@ -184,7 +184,36 @@
             </div>
         </div>
 
+        <!-- TOTAL DE NOTIFICAÇÕES LIDAS -->
+        <div class="col-12 col-sm-6 col-md-3">
+            <div class="info-box">
+                <span class="info-box-icon bg-gradient-gray elevation-1"><i class="fas fa-exclamation"></i></span>
+
+                <div class="info-box-content">
+                    <span class="info-box-text">Total de notificações lidas</span>
+                    <span class="info-box-number">
+                        {{ sum_total_notificacoes_lidas|default_if_none:"0" }}
+                    </span>
+                </div>
+            </div>
+        </div>
+
+        <!-- TAXA DE NOTIFICAÇÕES LIDAS -->
+        <div class="col-12 col-sm-6 col-md-3">
+            <div class="info-box">
+                <span class="info-box-icon bg-gradient-gray elevation-1"><i class="fas fa-exclamation"></i></span>
+
+                <div class="info-box-content">
+                    <span class="info-box-text">Taxa de notificações lidas</span>
+                    <span class="info-box-number">
+                        {{ taxa_notificacoes_lidas|default_if_none:"0" }}<small>%</small>
+                    </span>
+                </div>
+            </div>
+        </div>
+
         <!-- TOTAL DE INFRAÇOES -->
+        <div class="w-100"></div>
         <div class="col-12 col-sm-6 col-md-3">
             <div class="info-box">
                 <span class="info-box-icon bg-gradient-gray elevation-1"><i class="fas fa-exclamation-triangle"></i></span>
@@ -217,7 +246,7 @@
             <span>Métricas de desempenho/mês</span>
         </div>
 
-        <!--  -->
+        <!-- TOTAL DE HORAS VALIDAS -->
         <div class="w-100"></div>
         <div class="col-12 col-sm-6 col-md-3">
             <div class="info-box">
@@ -232,7 +261,7 @@
             </div>
         </div>
 
-        <!--  -->
+        <!-- TOTAL DE HORAS VALIDAS USADAS -->
         <div class="col-12 col-sm-6 col-md-3">
             <div class="info-box">
                 <span class="info-box-icon bg-gradient-gray-dark elevation-1"><i class="fas fa-chart-bar"></i></span>
@@ -246,7 +275,7 @@
             </div>
         </div>
 
-        <!--  -->
+        <!-- DELTA -->
         <div class="col-12 col-sm-6 col-md-3">
             <div class="info-box">
                 <span class="info-box-icon bg-gradient-gray-dark elevation-1"><i class="fas fa-asterisk"></i></span>
@@ -259,6 +288,7 @@
                 </div>
             </div>
         </div>
+
     </div><br>
 
     <!-- RANKING -->
@@ -405,92 +435,99 @@
 
 {% comment %} BLOCO DE SCPRITS {% endcomment %}
 {% block script %}
-<script>
-    am4core.ready(function() {
+    <!-- AM CHARTS 4 -->
+    <script type="text/javascript" src="{% static 'plugins/amcharts-v4/js/core.js' %}"></script>
+    <script type="text/javascript" src="{% static 'plugins/amcharts-v4/js/charts.js' %}"></script>
+    <script type="text/javascript" src="{% static 'plugins/amcharts-v4/themes/dataviz.js' %}"></script>
+    <script type="text/javascript" src="{% static 'plugins/amcharts-v4/themes/animated.js' %}"></script>
+    <script type="text/javascript" src="{% static 'plugins/amcharts-v4/lang/pt_BR.js' %}"></script>
 
-    // Themes begin
-    am4core.useTheme(am4themes_animated);
-    // Themes end
+    <script>
+        am4core.ready(function() {
 
-    // Create chart instance
-    var chart = am4core.create("chartdiv", am4charts.PieChart);
+        // Themes begin
+        am4core.useTheme(am4themes_animated);
+        // Themes end
 
-    // Set data
-    var selected;
-    var types = [{
-    type: "Fossil Energy",
-    percent: 70,
-    color: chart.colors.getIndex(0),
-    subs: [{
-        type: "Oil",
-        percent: 15
-    }, {
-        type: "Coal",
-        percent: 35
-    }, {
-        type: "Nuclear",
-        percent: 20
-    }]
-    }, {
-    type: "Green Energy",
-    percent: 30,
-    color: chart.colors.getIndex(1),
-    subs: [{
-        type: "Hydro",
-        percent: 15
-    }, {
-        type: "Wind",
-        percent: 10
-    }, {
-        type: "Other",
-        percent: 5
-    }]
-    }];
+        // Create chart instance
+        var chart = am4core.create("chartdiv", am4charts.PieChart);
 
-    // Add data
-    chart.data = generateChartData();
+        // Set data
+        var selected;
+        var types = [{
+        type: "Fossil Energy",
+        percent: 70,
+        color: chart.colors.getIndex(0),
+        subs: [{
+            type: "Oil",
+            percent: 15
+        }, {
+            type: "Coal",
+            percent: 35
+        }, {
+            type: "Nuclear",
+            percent: 20
+        }]
+        }, {
+        type: "Green Energy",
+        percent: 30,
+        color: chart.colors.getIndex(1),
+        subs: [{
+            type: "Hydro",
+            percent: 15
+        }, {
+            type: "Wind",
+            percent: 10
+        }, {
+            type: "Other",
+            percent: 5
+        }]
+        }];
 
-    // Add and configure Series
-    var pieSeries = chart.series.push(new am4charts.PieSeries());
-    pieSeries.dataFields.value = "percent";
-    pieSeries.dataFields.category = "type";
-    pieSeries.slices.template.propertyFields.fill = "color";
-    pieSeries.slices.template.propertyFields.isActive = "pulled";
-    pieSeries.slices.template.strokeWidth = 0;
+        // Add data
+        chart.data = generateChartData();
 
-    function generateChartData() {
-    var chartData = [];
-    for (var i = 0; i < types.length; i++) {
-        if (i == selected) {
-        for (var x = 0; x < types[i].subs.length; x++) {
+        // Add and configure Series
+        var pieSeries = chart.series.push(new am4charts.PieSeries());
+        pieSeries.dataFields.value = "percent";
+        pieSeries.dataFields.category = "type";
+        pieSeries.slices.template.propertyFields.fill = "color";
+        pieSeries.slices.template.propertyFields.isActive = "pulled";
+        pieSeries.slices.template.strokeWidth = 0;
+
+        function generateChartData() {
+        var chartData = [];
+        for (var i = 0; i < types.length; i++) {
+            if (i == selected) {
+            for (var x = 0; x < types[i].subs.length; x++) {
+                chartData.push({
+                type: types[i].subs[x].type,
+                percent: types[i].subs[x].percent,
+                color: types[i].color,
+                pulled: true
+                });
+            }
+            } else {
             chartData.push({
-            type: types[i].subs[x].type,
-            percent: types[i].subs[x].percent,
-            color: types[i].color,
-            pulled: true
+                type: types[i].type,
+                percent: types[i].percent,
+                color: types[i].color,
+                id: i
             });
+            }
         }
+        return chartData;
+        }
+
+        pieSeries.slices.template.events.on("hit", function(event) {
+        if (event.target.dataItem.dataContext.id != undefined) {
+            selected = event.target.dataItem.dataContext.id;
         } else {
-        chartData.push({
-            type: types[i].type,
-            percent: types[i].percent,
-            color: types[i].color,
-            id: i
-        });
+            selected = undefined;
         }
-    }
-    return chartData;
-    }
+        chart.data = generateChartData();
+        });
 
-    pieSeries.slices.template.events.on("hit", function(event) {
-    if (event.target.dataItem.dataContext.id != undefined) {
-        selected = event.target.dataItem.dataContext.id;
-    } else {
-        selected = undefined;
-    }
-    chart.data = generateChartData();
-    });
-
-    }); // end am4core.ready()
-</script>
+        }); // end am4core.ready()
+    </script>
 {% endblock %}
