ajustando nome da url historico admin

--- a/templates/template-administrativo.html
+++ b/templates/template-administrativo.html
@@ -90,7 +90,7 @@
                                     <a href="{% url 'dashboard' %}" class="btn btn-block btn-secondary">Dados gerais</a>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-4">
-                                    <a href="{% url 'historico' %}" class="btn btn-block btn-secondary">Histórico</a>
+                                    <a href="{% url 'historico-admin' %}" class="btn btn-block btn-secondary">Histórico</a>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-4">
                                     <a href="{% url 'report' %}" class="btn btn-block btn-secondary">Relatórios</a>
