Alterando cabecalho da tabela

--- a/usuario/templates/notificacoes.html
+++ b/usuario/templates/notificacoes.html
@@ -27,7 +27,7 @@
                     <tr>
                         <th>Descrição</th>
                         <th>Data - Hora</th>
-                        <th>Ações</th>
+                        <th>Visualizar</th>
                     </tr>
                 </thead>
                 <tbody>
