Incluidno quantidade de paradas  e notificacoes

--- a/templates/template.html
+++ b/templates/template.html
@@ -130,7 +130,7 @@
                         <li class="nav-item has-treeview">
                             <a href="{% url 'historico' %}" class="nav-link">
                                 <i class="nav-icon fas fa-history"></i>
-                                <p>Histórico<span class="badge badge-warning right">2</span></p>
+                                <p>Histórico<span class="badge badge-warning right">{{ paradas_ativas }}</span></p>
                             </a>
                         </li>
 
@@ -138,7 +138,7 @@
                         <li class="nav-item has-treeview">
                             <a href="{% url 'notificacoes' %}" class="nav-link">
                                 <i class="nav-icon fas fa-bell"></i>
-                                <p>Notificações<span class="badge badge-danger right">2</span></p>
+                                <p>Notificações<span class="badge badge-danger right">{{ notificacoes_ativas }}</span></p>
                             </a>
                         </li>
 
