--- a/usuario/templates/veiculo.html
+++ b/usuario/templates/veiculo.html
@@ -63,7 +63,7 @@
                     <tr>
                         <th>Apelido</th>
                         <th>Placa</th>
-                        <th>Remover</th>
+                        <th style="width: 70px;">Remover</th>
                     </tr>
                 </thead>
                 <tbody>
