Ajustando mensagem de recuperacao de senha

--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,12 +1,10 @@
 {% autoescape off %}
-Password Reset Request on Easy Park
+Alteração de senha - Easy Park
 
-Your user ID: {{ user.get_username }}
+Seu usuário: {{ user.get_username }}
 
-Click the link below:
+Clique no linke a baixo:
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
-
-If clicking the link above doesn't work, please copy and paste the URL in a new browser window instead.
 
 Easy Park Team
 {% endautoescape %}
