Alterando id do usuario por username

--- a/templates/email/validacao.html
+++ b/templates/email/validacao.html
@@ -2,7 +2,7 @@
 Validação de email - Easy Park<br><br>
 Seu usuário: {{ user_name }}<br><br>
 Clique no linke a baixo:<br>
-{{ scheme_host}}{% url 'validaremail' userid=user_id hash=hash %}
+{{ scheme_host}}{% url 'validaremail' username=username hash=hash %}
 <br><br>
 Easy Park Team
 {% endautoescape %}
