Criando funcao que valida perfil se esta completo

--- a/usuario/templates/estacionar.html
+++ b/usuario/templates/estacionar.html
@@ -48,7 +48,7 @@
             {{ sucesso_mensagem }}
         </div>
         {% endif %}
-        {% if perfilvalido %}
+        {% if perfilvalido == False %}
         <div class="alert alert-warning" role="alert">
             Complete seu cadastro, para conseguir estacionar seu veículo.
         </div>
