Removendo opcao de ordenacao na tabela

--- a/usuario/templates/historico.html
+++ b/usuario/templates/historico.html
@@ -63,7 +63,7 @@
                 "paging": true,
                 "lengthChange": false,
                 "searching": true,
-                "ordering": true,
+                "ordering": false,
                 "info": true,
                 "autoWidth": false,
                 "cell-border": false,
