--- a/usuario/templates/veiculo.html
+++ b/usuario/templates/veiculo.html
@@ -121,7 +121,7 @@
                 "paging": true,
                 "lengthChange": false,
                 "searching": false,
-                "ordering": true,
+                "ordering": false,
                 "info": true,
                 "autoWidth": false,
                 "language": {
