--- a/administrativo/templates/dashboard-summary.html
+++ b/administrativo/templates/dashboard-summary.html
@@ -176,7 +176,7 @@
                 <span class="info-box-icon bg-gradient-gray elevation-1"><i class="fas fa-exclamation"></i></span>
 
                 <div class="info-box-content">
-                    <span class="info-box-text">Taxa de notificações</span>
+                    <span class="info-box-text">Taxa de notificações/paradas</span>
                     <span class="info-box-number">
                         {{ taxa_notificacoes|default_if_none:"0" }}<small>%</small>
                     </span>
