--- a/administrativo/templates/dashboard-summary.html
+++ b/administrativo/templates/dashboard-summary.html
@@ -325,7 +325,7 @@
                                 <td>{{ forloop.counter }}.</td>
                                 <td>{{ vendas.funcionario__first_name }}</td>
                                 <td>{{ vendas.total }}</td>
-                                <td>{{ vendas.parada__quantidade_horas__valor }}</td>
+                                <td>{{ vendas.sum }}</td>
                             </tr>
                         {% endfor %}
                     {% endif %}
